--- a/css/cats.css
+++ b/css/cats.css
@@ -1,455 +1,201 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Raleway", sans-serif;
-  }
-  body {
-    background-image: url(../assets/pagina/fondo.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    height: 100vh;
-  }
-/*HEADER*/
-
-header .container__header {
-    width: 100%;
-    height: 140px;
-    border-bottom: 2px solid #eb6b02;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* position: relative; */
-    position: fixed;
-    background-color: white;
-    z-index: 1;
-    
-  }
-
-.header__img{   
-    padding-top: 20px;
-    padding-left: 20px;
-    margin-right: 40px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Raleway", sans-serif;
 }
 
-.header__category i{
-    cursor: pointer;
-    font-size: 20px;
+body {
+  background-image: url(../assets/pagina/fondo.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+  height: 100vh;
 }
 
 
-.header__category{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 80px;
-    margin-left: -100px;
+.barra {
+  width: 100%;
+  height: 30px;
+  margin-top: 50px;
+  display: flex;
+  text-align: end;
+  justify-content: center;
+  background-color: #f1c098;
+}
+.container__home {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.header__category .nav ul{
-    list-style: none;
+.home__img {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 10px;
 }
 
-
-.header__category .nav__item{
-    position: relative;   
+.home__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-
-.header__category .nav__item li:hover .subitem{
-    visibility: visible;
-    opacity: 1;
+.home__hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
-
-.header__category .subitem{
-    position: absolute;
-    width: 1080px;
-    left: -20px;
-    visibility: hidden;
-    opacity: 0;
-    transition: all .6s ease-in-out;
-    background: #00c3ff;
-    text-align: center;
-    border-radius: 8px;
-    display: flex;
-    margin-top: 20px;
-
+.home__hover:hover {
+  opacity: 1;
 }
 
-
-.header__category .subitem li a{
-    width: 100%;
-    display: block;
-    padding: 15px 20px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    text-transform: capitalize;
-    font-weight: 600;
+.home__title {
+  font-size: 24px;
+  font-weight: bold;
 }
-
-.header__category .subitem li a:hover{
-    color: #000;
-} 
-
-
-.header__category .category__copy{
-    margin-left: 10px;
-    text-transform: uppercase;
-    color: #2fc1ee;
-    font-size: 20px;
-    font-weight: 700;
-}
-
-.header__input{
-    padding-top: 80px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header__input input{
-    padding: 12px 180px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    border: 1px solid #ccc;
-}
-
-.header__input input:hover{
-    box-shadow: 0 0 2px 1px #ccc;
-}
-
-
-
-.header__input i{
-    position: absolute;
-    right: 15px;
-    bottom: 15px;
-    cursor: pointer;
-    font-size: 18px;
-}
-
-.header__product{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 80px ;
-    padding-right: 40px;
-}
-
-.header__product .product__link{
-    display: flex;
-    text-decoration: none;
-    color: #000;
-}
-
-
-.header__product .product__link i{
-    font-size: 20px;
-    cursor: pointer;
-}
-
-
-.header__product .product__link:hover{
-    transform: scale(1.1); 
-}
-
-
-.header__product .product__copy{
-    margin-left: 10px;
-    text-transform: uppercase;
-    color: #2fc1ee;
-}
-
-.header__service{
-    position: absolute;
-    top: 20px;
-    right: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header__service .service__copy{
-    margin-left: 40px;
-    text-transform: capitalize;
-}
-
-.header__service i{
-    margin-left: 20px;
-    font-size: 24px;
-    cursor: pointer;
-    color: #3CB371;
-    margin-right: 20px;
-}
-
-.header__service i:hover{
-    transform: scale(1.2);
-}
-
-.header__service .service__paragraph{
-    border-left: 2px solid #2fc1ee;
-    padding-left: 10px;
-}
-/*HOME*/
-.home{
-    padding: 100px 15px;
-}
-main .barra{
-    width: 100%;
-    height: 30px;
-    margin-top: 50px;
-    display: flex;
-    text-align: end;
-    justify-content: center;
-    background-color: #f1c098;
-}
-main .navegacion{
-    margin-top: 20px;
-}
-main .navegacion a{
-    text-decoration: none;
-    color: #2fc1ee;
-  
-}
-main .container__home{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: relative;
-    margin-top: 30px;
-}
-
-.home__img{
-    width: 150px;
-    height: 150px;
-    margin-right: 20px;
-    cursor: pointer;
-   
-}
-
-.home__img img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 2px solid #ccc;
-    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-}
-
-
-.home__hover{
-    position: absolute;
-    top: 0;
-    width: inherit;
-    height: 100%;
-    background: #f0000080;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: scale(0);
-    transition:  transform .6s;
-}
-
-.home__title{
-    color: #fff;
-    text-transform: uppercase;
-}
-
-.home__img:hover .home__hover{
-    transform: scale(1);
-}
-
 
 
 /*CATEGORIAS*/
 
-.category{
-    padding: 100px  15px;
+.category {
+  padding: 100px 15px;
 }
 
-.container__category{
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    flex-wrap: wrap;
+.container__category {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  flex-wrap: wrap;
 }
 
-.card__category{
-    width: 280px;
-    height: 280px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 4px 2px rgba(0, 0, 0, .9);
+.card__category {
+  width: 280px;
+  height: 280px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, .9);
 }
 
-.card__img{
-    display: block;
-    margin: auto;
-    width: 280px;
-    height: 280px;
+.card__img {
+  display: block;
+  margin: auto;
+  width: 280px;
+  height: 280px;
 
 }
 
-.card__img img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.card__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
+.btn-whatsapp {
+  position: fixed;
+  z-index: 999;
+  bottom: 20px;
+  right: 20px;
+}
 
+.btn-whatsapp:before,
+.btn-whatsapp:after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 4px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: #00e676;
+  opacity: 0;
+  animation: onda 1.7s infinite;
+}
 
-/*FOOTER*/
+.btn-whatsapp:before {
+  animation-delay: 1s;
+}
 
-footer .container__footer {
+.btn-whatsapp:after {
+  animation-delay: 1.3s;
+}
+
+.btn-whatsapp img {
+  position: relative;
+  z-index: 2;
+}
+
+@keyframes onda {
+  0% {
+    transform: scale(1);
+  }
+
+  15% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(2.5);
+  }
+}
+
+@media screen and (max-width:1000px) {
+  .barra {
     width: 100%;
     height: auto;
-    background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
-      url("../assets/perro/producto1.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    padding: 80px 40px;
-    color: #fff;
-    text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-    padding-bottom: 120px;
+    margin-top: 50px;
+    margin-top: 30px;
   }
-  
-  /* footer .footer__logo img {
-    width: 150px;
-  } */
-  
-  footer .footer__figure {
-    width: 150px;
-    height: 150px;
-    
-  }
-  
-  footer .footer__figure img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: bottom;
-  }
-  
-  footer .footer__services {
-    margin-left: 40px;
-    text-align: center;
-  }
-  
-  footer .services__title {
-    text-transform: uppercase;
-    padding-bottom: 10px;
-  }
-  
-  footer .services__link {
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  footer .services__paragraph {
-    font-size: 22px;
-  }
-  
-  footer .footer__description {
-    width: 40%;
-    text-align: center;
+
+  .barra h2 {
+    font-size: 15px;
+    margin: 0 auto;
 
   }
-  
-  footer .description__title {
-    text-transform: uppercase;
-    padding-bottom: 20px;
+  .home__img {
+    width: 80px;
+    height: 80px;
+}
+.home__title {
+  font-size: 12px;
+}
+}
+
+@media screen and (max-width:320px) {
+  .barra {
+    width: 70%;
+    height: auto;
+    margin-top: -370px;
+
   }
-  
-  footer .description__copy {
-    text-align: justify;
-    font-size: 18px;
+
+  .barra h2 {
+    font-size: 10px;
+    margin: 0 auto;
+
   }
-  
-  footer .footer__text {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    color: #fff;
-    padding: 20px 40px;
-  }
-  
-  footer .footer__img {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  footer .footer__img img{
-      width: 50px;
-      height: 50px;
-    
-    }
-  
-  footer .footer__img a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  footer .footer__img a  {
-    padding: 0 20px;
-    font-size: 20px;
-    transition: all 0.6s;
-  }
-  
-  footer .footer__img .a1:hover {
-    color: #2fc1ee;
-    transform: scale(1.2);
-  }
-  
-  footer .footer__img .a2:hover {
-    color: red;
-    transform: scale(1.2);
-  }
-  
-  footer .footer__img .a3:hover {
-    color: blueviolet;
-    transform: scale(1.2);
-  }
-  
-  footer .text__paragraph {
-    text-transform: uppercase;
-    text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-    text-align: center;
-  }
-  
-  footer .cta {
-    display: inline-block;
-    text-decoration: none;
-    color: #fff;
-    text-transform: capitalize;
-    font-size: 18px;
-    transition: all 0.6s;
-    text-shadow: rgba(0, 0, 0, 0.5);
-  }
-  
-  footer .cta:hover {
-    color: #ccc;
-    transform: scale(1.2);
-  }
-  footer .text__copy{
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-  
-  }
-  
+  .home__img {
+    width: 50px;
+    height: 50px;
+}
+
+.home__title {
+    font-size: 10px;
+}
+
+}
