--- a/css/footer.css
+++ b/css/footer.css
@@ -1,144 +1,275 @@
+
 footer .container__footer {
-    width: 100%;
+  width: 100%;
+  height: auto;
+  background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
+    url("../assets/perro/producto1.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  padding: 80px 40px;
+  color: #fff;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  padding-bottom: 120px;
+}
+
+footer .footer__figure {
+  width: 150px;
+  height: 150px;
+}
+
+footer .footer__figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: bottom;
+}
+
+footer .footer__services {
+  margin-left: 40px;
+  text-align: center;
+}
+
+footer .services__title {
+  text-transform: uppercase;
+  padding-bottom: 10px;
+}
+
+footer .services__link {
+  text-decoration: none;
+  color: #fff;
+}
+
+footer .services__paragraph {
+  font-size: 22px;
+}
+
+footer .footer__description {
+  width: 40%;
+  text-align: center;
+}
+
+footer .description__title {
+  text-transform: uppercase;
+  padding-bottom: 20px;
+}
+
+footer .description__copy {
+  text-align: justify;
+  font-size: 18px;
+}
+
+footer .footer__text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  color: #fff;
+  padding: 20px 40px;
+}
+
+footer .footer__img {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+footer .footer__img img {
+  width: 50px;
+  height: 50px;
+
+}
+
+footer .footer__img a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer .footer__img a {
+  padding: 0 20px;
+  font-size: 20px;
+  transition: all 0.6s;
+}
+
+footer .footer__img .a1:hover {
+  color: #2fc1ee;
+  transform: scale(1.2);
+}
+
+footer .footer__img .a2:hover {
+  color: red;
+  transform: scale(1.2);
+}
+
+footer .footer__img .a3:hover {
+  color: blueviolet;
+  transform: scale(1.2);
+}
+
+footer .text__paragraph {
+  text-transform: uppercase;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+footer .cta {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 18px;
+  transition: all 0.6s;
+  text-shadow: rgba(0, 0, 0, 0.5);
+}
+
+footer .cta:hover {
+  color: #ccc;
+  transform: scale(1.2);
+}
+
+footer .text__copy {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+}
+
+.btn-whatsapp {
+  position: fixed;
+  z-index: 999;
+  bottom: 20px;
+  right: 20px;
+}
+
+.btn-whatsapp:before,
+.btn-whatsapp:after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 4px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: #00e676;
+  opacity: 0;
+  animation: onda 1.7s infinite;
+}
+
+.btn-whatsapp:before {
+  animation-delay: 1s;
+}
+
+.btn-whatsapp:after {
+  animation-delay: 1.3s;
+}
+
+.btn-whatsapp img {
+  position: relative;
+  z-index: 2;
+}
+
+@keyframes onda {
+  0% {
+    transform: scale(1);
+  }
+
+  15% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(2.5);
+  }
+}
+@media screen and (max-width:1000px) {
+.container__footer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
+    url("../assets/perro/producto1.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+
+
+}
+
+.footer__services .services__title {
+  width: 400px;
+  height: auto;
+  font-size: 20px;
+  color: #00c3ff;
+
+}
+
+.footer__figure {
+  margin-top: 10px;
+  justify-content: float;
+
+}
+
+.footer__description {
+  font-size: 10PX;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.description__title {
+  width: 300px;
+  font-size: 25px;
+  display: inline-block;
+  color: #00c3ff;
+  margin-top: 20px;
+}
+
+.description__copy {
+  max-width: 1000px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+
+}
+
+.footer__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.footer__img {
+  width: 10px;
+  height: 10px;
+  margin-bottom: 30px;
+}
+
+.text__copy {
+  font-size: 10px;
+  color: #000;
+}
+}
+@media screen and (max-width:320px) {
+  .footer__services .services__title {
+    width: 250px;
     height: auto;
-    background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
-      url("../assets/perro/producto1.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    padding: 80px 40px;
-    color: #fff;
-    text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-    padding-bottom: 120px;
-  }
-  
-  /* footer .footer__logo img {
-    width: 150px;
-  } */
-  
-  footer .footer__figure {
-    width: 150px;
-    height: 150px;
-  }
-  
-  footer .footer__figure img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: bottom;
-  }
-  
-  footer .footer__services {
-    margin-left: 40px;
-    text-align: center;
-  }
-  
-  footer .services__title {
-    text-transform: uppercase;
-    padding-bottom: 10px;
-  }
-  
-  footer .services__link {
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  footer .services__paragraph {
-    font-size: 22px;
-  }
-  
-  footer .footer__description {
-    width: 40%;
-    text-align: center;
-  }
-  
-  footer .description__title {
-    text-transform: uppercase;
-    padding-bottom: 20px;
-  }
-  
-  footer .description__copy {
-    text-align: justify;
     font-size: 18px;
-  }
-  
-  footer .footer__text {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    color: #fff;
-    padding: 20px 40px;
-  }
-  
-  footer .footer__img {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  footer .footer__img img{
-      width: 50px;
-      height: 50px;
-    
-    }
-  
-  footer .footer__img a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  footer .footer__img a  {
-    padding: 0 20px;
-    font-size: 20px;
-    transition: all 0.6s;
-  }
-  
-  footer .footer__img .a1:hover {
-    color: #2fc1ee;
-    transform: scale(1.2);
-  }
-  
-  footer .footer__img .a2:hover {
-    color: red;
-    transform: scale(1.2);
-  }
-  
-  footer .footer__img .a3:hover {
-    color: blueviolet;
-    transform: scale(1.2);
-  }
-  
-  footer .text__paragraph {
-    text-transform: uppercase;
-    text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-    text-align: center;
-  }
-  
-  footer .cta {
+    color: #00c3ff;
     display: inline-block;
-    text-decoration: none;
-    color: #fff;
-    text-transform: capitalize;
-    font-size: 18px;
-    transition: all 0.6s;
-    text-shadow: rgba(0, 0, 0, 0.5);
-  }
-  
-  footer .cta:hover {
-    color: #ccc;
-    transform: scale(1.2);
-  }
-  footer .text__copy{
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
   
   }
-  
+}
