--- a/css/header.css
+++ b/css/header.css
@@ -1,317 +1,269 @@
 /*HEADER*/
-* {
-  padding: 0px;
-  border: 0px;
-  margin: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+
+.menu {
+  font-family: 'Poppins', sans-serif;
+  background-color: #edeff1;
+  height: 150px;
 }
-.container__header {
-  width: 100%;
-  height: 140px;
-  border-bottom: 2px solid #eb6b02;
+
+.menu__container {
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  background-color: white;
-  z-index: 1;
+  width: 90%;
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
 }
 
-.header__img {
-  padding-top: 20px;
-  padding-left: 20px;
-  margin-right: 40px;
-}
-.header__category i {
-  cursor: pointer;
-  font-size: 20px;
-}
-.header__category {
-  position: absolute;
-  display: flex;
-  padding-top: 80px;
-  margin-left: 280px;
-}
-.header__category .nav ul {
-  list-style: none;
-}
-.header__category .nav__item {
-  position: relative;
-}
-
-header .header__category .nav__item li:hover .subitem {
-  visibility: visible;
-  opacity: 1;
-}
-.header__category .subitem {
-  position: absolute;
-  width: 1100px;
-  left: -20px;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.6s ease-in-out;
-  background: #19b4e8;
-  text-align: center;
-  border-radius: 8px;
-  display: flex;
-  margin-top: 10px;
-}
-.header__category .subitem li a {
-  width: 100%;
-  display: block;
-  padding: 15px 20px;
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  text-transform: capitalize;
-  font-weight: 600;
-}
-.header__category .subitem li a:hover {
+.fa-solid {
   color: #000;
-}
-.header__category .category__copy {
-  margin-left: 10px;
-  text-transform: uppercase;
-  color: #2fc1ee;
-  font-size: 20px;
-  font-weight: 700;
+  padding: 5px;
+
 }
 
-.header__input {
-  padding-top: 80px;
-  position: absolute;
+.menu__links {
+  height: 100%;
+  transition: transform .5s;
+  display: flex;
+  z-index: 2;
+
+}
+
+.menu__item {
+  list-style: none;
+  position: relative;
+  height: 100%;
+  --clip: polygon(0 0, 100% 0, 100% 0, 0 0);
+  --transform: rotate(-90deg);
+  z-index: -2;
+}
+
+.menu__item:hover {
+  --clip: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  --transform: rotate(0);
+}
+
+.menu__link {
+  color: #2fc1ee;
+  text-decoration: none;
+  padding: 0 30px;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  font-weight: bold;
+
+}
+
+.fa-brands {
+  color: #00e676;
+  padding: 5px;
+  width: 10px;
+}
+
+.product__link {
+  text-decoration: none;
+}
+.header__input__container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin-left: 800px;
+ 
 }
-.header__input input {
-  padding: 12px 180px;
+
+.header__input  {
+   position: relative;
+  display: inline-block;
+}
+
+.header__input  input[type="text"] {
+  width: 400px;
+  padding: 10px;
+  padding-right: 40px; 
   border-radius: 30px;
-  border: none;
   outline: none;
   border: 1px solid #ccc;
+}
+
+.header__input  button[type="submit"] {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.header__input  button[type="submit"] i {
+  font-size: 16px;
 }
 
 .header__input input:hover {
   box-shadow: 0 0 2px 1px #ccc;
 }
 
-.header__input i {
+.menu__arrow {
+  transform: var(--transform);
+  transition: transform .3s;
+  display: block;
+  margin-left: 3px;
+}
+
+.menu__nesting {
+  list-style: none;
+  transition: clip-path .3s;
+  clip-path: var(--clip);
   position: absolute;
-  right: 15px;
-  bottom: 15px;
-  cursor: pointer;
-  font-size: 18px;
+  right: 0;
+  bottom: 0;
+  width: max-content;
+  transform: translateY(100%);
+  background-color: #f8f5f5;
 }
-.header__product {
+
+.menu__link--inside {
+  padding: 30px 100px 30px 20px;
+}
+
+
+
+.menu__hamburguer {
+  height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding-top: 80px;
-  padding-right: 40px;
-}
-
-.header__product .product__link {
-  display: flex;
-  text-decoration: none;
-  color: #000;
-}
-.header__product .product__link i {
-  font-size: 20px;
+  padding: 0 15px;
   cursor: pointer;
+  display: none;
 }
 
-.header__product .product__link:hover {
-  transform: scale(1.1);
+.menu__img {
+  display: block;
+  width: 36px;
 }
 
-.header__product .product__copy {
-  margin-left: 10px;
-  text-transform: uppercase;
-  color: #2fc1ee;
-}
-
-.header__service {
-  position: absolute;
-  top: 20px;
-  right: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.header__service .service__copy {
-  margin-left: 40px;
-  text-transform: capitalize;
-}
-
-.header__service i {
-  margin-left: 20px;
-  font-size: 24px;
-  cursor: pointer;
-  color: #3cb371;
-  margin-right: 20px;
-}
-
-.header__service i:hover {
-  transform: scale(1.2);
-}
-
-.header__service .service__paragraph {
-  border-left: 2px solid #2fc1ee;
-  padding-left: 10px;
-}
-@media screen and (max-width:1000px) {
-  .container__header {
-    display: flex;
-    background-color: #eb6b02;
-    position: relative;
-  }
-  .header__img {
-    margin-top: 10px;
-    width: 120px;
-    height:120px;
-  }
-  .header__category {
-    margin-left: 135px;
-    margin-top: -60px;
-   
-  }
-  .nav__item .subitem{
-    width: 200px;
-    height: auto;
-    display: block;
-    align-items: baseline;
-    background-color: whitesmoke;
-    margin-top: 50px;
-    
-  }
-  .header__category .subitem li a {
-    width: 100%;
-    padding: 7px 20px;
-    color: blue;
-    text-decoration: none;
-    font-size: 18px;
-    text-transform: capitalize;
-    font-weight: 600;
-  }
-  
-  .header__product {
-    margin-top: -60px;
-  }
-  .header__input {
-    margin-right:60%;
-    margin-left: 20%;
-    margin-top: 90px;
-    padding: 8px 45px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    justify-content: center;
-    display: flex;
-  }
-  .header__input input {
-    padding: 6px 90px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    border: 1px solid #ccc;
-  }
-
-  .header__input i {
-    position: absolute;
-    right: 90px;
-    bottom: 15px;
-    cursor: pointer;
-    font-size: 18px;
-  }
-}
-
-@media screen and (max-width:320px) {
-  .container__header {
-    display: flex;
-    background-color: #e9e4e0;
-    position: relative;
-    font-size: 10px;
-  }
-  .container__header img {
-   width: 95px;
-   height: 95px;
-   margin-left: 5px;
-  }
-  .header__category {
-    margin-left: 100px;
-    margin-top: -60px;
-    
-   
-  }
-  .header__category i {
-    cursor: pointer;
-    font-size: 13px;
-  }
-  .header__category .category__copy {
-    margin-left: 5px;
-    text-transform: uppercase;
+@media screen and (max-width:1200px) {
+  .menu__link {
     color: #2fc1ee;
-    font-size: 13px;
-    font-weight: 700;
+    text-decoration: none;
+    padding: 0 30px;
+    display: flex;
+    height: 50%;
+    align-items: center;
+    font-weight: bold;
+
+
   }
-  .nav__item .subitem{
-    width: 150px;
-    height: auto;
-    display: block;
-    align-items: baseline;
-    background-color: whitesmoke;
-    margin-top: 50px;
+
+  .menu__links {
+    height: 80%;
+    transition: transform .5s;
+    display: flex;
+
+
+  }
+
+}
+
+@media screen and (max-width:800px) {
+  .header__input__container {
+
+    margin-top: -60px;
     
   }
-  .header__category .subitem li a {
+  .header__input input[type="text"] {
     width: 100%;
-    padding: 7px 20px;
-    color: blue;
-    text-decoration: none;
-    font-size: 13px;
-    text-transform: capitalize;
-    font-weight: 600;
   }
- 
-  .header__product {
-    margin-top: -60px;
-    font-size: 12px;
-  }
-  .header__product .product__link i {
-    font-size: 12px;
-    cursor: pointer;
-  }
-  .header__input {
-    margin-right:60%;
-    margin-left: 3%;
-    margin-top: 90px;
-    padding: 8px 40px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    justify-content: center;
+  .menu__hamburguer {
     display: flex;
-   
+    margin-top: -40px;
+
+  }
+
+  .menu__item {
+    --clip: 0;
+    overflow: hidden;
+  }
+
+  .menu__item--active {
+    --transform: rotate(0);
+    --background: #5e7094;
+  }
+
+  .menu__item--show {
+    background-color: var(--background);
+  }
+
+
+  .menu__links {
+    position: fixed;
+    max-width: 400px;
+    width: 100%;
+    top: 70px;
+    bottom: 0;
+    right: 0;
+    background-color: #ffff;
+    overflow-y: auto;
+    display: grid;
+    grid-auto-rows: max-content;
+    transform: translateX(100%);
+    z-index: 2;
+  }
+
+  .menu__links--show {
+    transform: unset;
+    width: 100%;
+  }
+
+  .menu__link {
+    padding: 25px 0;
+    padding-left: 30px;
+    height: auto;
+  }
+
+
+  .menu__arrow {
+    margin-left: auto;
+    margin-right: 20px;
+  }
+
+  .menu__nesting {
+    display: grid;
+    position: unset;
+    width: 100%;
+    transform: translateY(0);
+    height: 0;
+    transition: height .3s;
+  }
+
+  .menu__link--inside {
+    width: 90%;
+    margin-left: auto;
+    border-left: 1px solid #798499;
+  }
+}
+@media screen and (max-width: 600px) {
+  .search-container input[type="text"] {
+    width: 100%;
+    border-radius: 5px;
+  }
+  
+  .search-container button[type="submit"] {
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 10px;
+  }
+}
+@media screen and (max-width:320px) {
+  .header__input {
+    position: relative;
   }
 
   .header__input input {
-    padding: 3px 30px;
+    padding: 5px 30px;
     border-radius: 30px;
-    border: none;
-    outline: none;
     border: 1px solid #ccc;
-    margin-left: 15px;
-    font-size: 7px;
-  }
-
-  .header__input i {
-    position: absolute;
-    right: 90px;
-    bottom: 12px;
-    cursor: pointer;
-    font-size: 13px;
-    margin-left: 10px;
-  
+    position: relative;
   }
 }
