--- a/css/style.css
+++ b/css/style.css
@@ -1,212 +1,181 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Raleway", sans-serif;
 }
-
 body {
-  background-image: url(../assets/pagina/fondo.png);
+  background-image: url('../assets/pagina/fondo.png');
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
   background-attachment: fixed;
   height: 100vh;
 }
 
 /*HEADER*/
 
-.container__header {
-  width: 100%;
-  height: 140px;
-  border-bottom: 2px solid #eb6b02;
+
+.menu {
+  font-family: 'Poppins', sans-serif;
+  background-color: #edeff1;
+  height: 150px;
+}
+
+.menu__container {
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* position: relative; */
-  position: fixed;
-  background-color: white;
-  z-index: 1;
-
+  width: 90%;
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
 }
 
-.header__img {
-  padding-top: 20px;
-  padding-left: 20px;
-  margin-right: 40px;
-}
-
-.header__category i {
-  cursor: pointer;
-  font-size: 20px;
-}
-
-header .header__category {
-  position: absolute;
-  display: flex;
-  /* justify-content: center;
-  align-items: center; */
-  padding-top: 80px;
-  margin-left: 280px;
-
-}
-
-header .header__category .nav ul {
-  list-style: none;
-}
-
-.header__category .nav__item {
-  position: relative;
-}
-
-.header__category .nav__item li:hover .subitem {
-  visibility: visible;
-  opacity: 1;
-}
-
-header .header__category .subitem {
-  position: absolute;
-  width: 1100px;
-  left: -20px;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.6s ease-in-out;
-  background: #00c3ff;
-  text-align: center;
-  border-radius: 8px;
-  display: flex;
-  margin-top: 10px;
-}
-
-.header__category .subitem li a {
-  width: 100%;
-  display: block;
-  padding: 15px 20px;
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  text-transform: capitalize;
-  font-weight: 600;
-}
-
-header .header__category .subitem li a:hover {
+.fa-solid {
   color: #000;
+  padding: 5px;
+
 }
 
-.header__category .category__copy {
-  margin-left: 10px;
-  text-transform: uppercase;
+.menu__links {
+  height: 100%;
+  transition: transform .5s;
+  display: flex;
+  z-index: 2;
+
+}
+
+.menu__item {
+  list-style: none;
+  position: relative;
+  height: 100%;
+  --clip: polygon(0 0, 100% 0, 100% 0, 0 0);
+  --transform: rotate(-90deg);
+  z-index: -2;
+}
+
+.menu__item:hover {
+  --clip: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  --transform: rotate(0);
+}
+
+.menu__link {
   color: #2fc1ee;
-  font-size: 20px;
-  font-weight: 700;
+  text-decoration: none;
+  padding: 0 30px;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  font-weight: bold;
+
 }
 
-.header__input {
-  padding-top: 80px;
-  position: absolute;
+.fa-brands {
+  color: #00e676;
+  padding: 5px;
+  width: 10px;
+}
+
+.product__link {
+  text-decoration: none;
+}
+.header__input__container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin-left: 800px;
-
+ 
 }
 
-header .header__input input {
-  padding: 12px 180px;
+.header__input  {
+   position: relative;
+  display: inline-block;
+}
+
+.header__input  input[type="text"] {
+  width: 400px;
+  padding: 10px;
+  padding-right: 40px; 
   border-radius: 30px;
-  border: none;
   outline: none;
   border: 1px solid #ccc;
 }
 
-header .header__input input:hover {
+.header__input  button[type="submit"] {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.header__input  button[type="submit"] i {
+  font-size: 16px;
+}
+
+.header__input input:hover {
   box-shadow: 0 0 2px 1px #ccc;
 }
 
-header .header__input i {
+.menu__arrow {
+  transform: var(--transform);
+  transition: transform .3s;
+  display: block;
+  margin-left: 3px;
+}
+
+.menu__nesting {
+  list-style: none;
+  transition: clip-path .3s;
+  clip-path: var(--clip);
   position: absolute;
-  right: 15px;
-  bottom: 15px;
-  cursor: pointer;
-  font-size: 18px;
+  right: 0;
+  bottom: 0;
+  width: max-content;
+  transform: translateY(100%);
+  background-color: #f8f5f5;
 }
 
-header .header__product {
+.menu__link--inside {
+  padding: 30px 100px 30px 20px;
+}
+
+
+
+.menu__hamburguer {
+  height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding-top: 80px;
-  padding-right: 40px;
-}
-
-header .header__product .product__link {
-  display: flex;
-  text-decoration: none;
-  color: #000;
-}
-
-header .header__product .product__link i {
-  font-size: 20px;
+  padding: 0 15px;
   cursor: pointer;
+  display: none;
 }
 
-.header__product .product__link:hover {
-  transform: scale(1.1);
-}
-
-.header__product .product__copy {
-  margin-left: 10px;
-  text-transform: uppercase;
-  color: #2fc1ee;
-}
-
-.header__service {
-  position: absolute;
-  top: 20px;
-  right: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.header__service .service__copy {
-  margin-left: 40px;
-  text-transform: capitalize;
-}
-
-header .header__service i {
-  margin-left: 20px;
-  font-size: 24px;
-  cursor: pointer;
-  color: #3cb371;
-  margin-right: 20px;
-}
-
-header .header__service i:hover {
-  transform: scale(1.2);
-}
-
-header .header__service .service__paragraph {
-  border-left: 2px solid #2fc1ee;
-  padding-left: 10px;
+.menu__img {
+  display: block;
+  width: 36px;
 }
 
 
 /*HOME*/
 
-main .home {
+.home {
   padding: 100px 15px;
 
 }
 
-main .container__home {
+.container__home {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   margin-top: 80px;
 }
 
-main .home__img {
+.home__img {
   width: 400px;
   height: 200px;
   position: relative;
@@ -214,14 +183,14 @@ main .home__img {
   cursor: pointer;
 }
 
-main .home__img img {
+.home__img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
 
-main .home__hover {
+.home__hover {
   position: absolute;
   top: 0;
   left: 0;
@@ -242,14 +211,14 @@ main .home__hover {
   text-align: center;
 }
 
-main .home__hover a {
+.home__hover a {
   display: block;
   margin-top: 20px;
   color: #fff;
   text-decoration: none;
 }
 
-main .home__hover a:hover {
+.home__hover a:hover {
   color: #e30f0f;
 }
 
@@ -265,14 +234,14 @@ main .home__inside {
 
 }
 
-main .inside__img {
+.inside__img {
   width: 100px;
   height: 100px;
   margin-left: 80px;
   margin-right: 60px;
 }
 
-main .inside__img img {
+.inside__img img {
   width: 100%;
   height: 100%;
   border: 1px solid grey;
@@ -280,12 +249,12 @@ main .inside__img img {
   border-radius: 50%;
 }
 
-main .animals__copy {
+.animals__copy {
   text-align: center;
   margin: 50px 0;
 }
 
-main .animals__copy h3 {
+.animals__copy h3 {
   font-size: 60px;
   font-weight: bold;
   color: #fff;
@@ -294,7 +263,7 @@ main .animals__copy h3 {
   -webkit-text-fill-color: transparent;
 }
 
-main .main__titulo {
+.main__titulo {
   width: 100%;
   height: 100px;
   display: flex;
@@ -303,7 +272,7 @@ main .main__titulo {
 
 }
 
-main .main__titulo h1 {
+.main__titulo h1 {
   font-size: 2em;
   font: bold 4.5vw/1.6 'Signika', sans-serif;
   user-select: none;
@@ -436,8 +405,7 @@ h1 span:nth-child(14) {
   justify-content: space-around;
   align-items: center;
   margin-top: -50px;
-  /* padding: 0 40px; */
-}
+  }
 
 .product__img {
   width: 250px;
@@ -693,74 +661,82 @@ footer .text__copy {
   }
 }
 
-@media screen and (max-width:1000px) {
-  .container__header {
-    display: flex;
-    background-color: #eb6b02;
-    position: relative;
-  }
+@media screen and (max-width:800px) {
 
-  .header img {
-    width: 130px;
-    height: 130px;
-  }
+  .header__input__container {
 
-  .header__category {
-    margin-left: -395px;
     margin-top: -60px;
-
+    
   }
-
-  .nav__item .subitem {
-    width: 200px;
-    height: auto;
-    display: block;
-    align-items: baseline;
-    background-color: whitesmoke;
-    margin-top: 50px;
-
-  }
-
-  .header__category .subitem li a {
+  .header__input input[type="text"] {
     width: 100%;
-    padding: 7px 20px;
-    color: blue;
-    text-decoration: none;
-    font-size: 18px;
-    text-transform: capitalize;
-    font-weight: 600;
   }
-
-  .header__product {
-    margin-top: -60px;
-  }
-
-  .header__input {
-    margin-right: 60%;
-    margin-left: 20%;
-    margin-top: 90px;
-    padding: 8px 45px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    justify-content: center;
+  .menu__hamburguer {
     display: flex;
+    margin-top: -40px;
+
   }
 
-  .header__input input {
-    padding: 6px 90px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    border: 1px solid #ccc;
+  .menu__item {
+    --clip: 0;
+    overflow: hidden;
   }
 
-  .header__input i {
-    position: absolute;
-    right: 90px;
-    bottom: 15px;
-    cursor: pointer;
-    font-size: 18px;
+  .menu__item--active {
+    --transform: rotate(0);
+    /* --background: #5e7094; */
+  }
+
+  .menu__item--show {
+    background-color: var(--background);
+  }
+
+
+  .menu__links {
+    position: fixed;
+    max-width: 400px;
+    width: 100%;
+    top: 120px;
+    bottom: 0;
+    right: 0;
+    background-color: #ffff;
+    overflow-y: auto;
+    display: grid;
+    grid-auto-rows: max-content;
+    transform: translateX(100%);
+    z-index: 2;
+  }
+
+  .menu__links--show {
+    transform: unset;
+    width: 100%;
+  }
+
+  .menu__link {
+    padding: 25px 0;
+    padding-left: 30px;
+    height: auto;
+  }
+
+
+  .menu__arrow {
+    margin-left: auto;
+    margin-right: 20px;
+  }
+
+  .menu__nesting {
+    display: grid;
+    position: unset;
+    width: 100%;
+    transform: translateY(0);
+    height: 0;
+    transition: height .3s;
+  }
+
+  .menu__link--inside {
+    width: 90%;
+    margin-left: auto;
+    /* border-left: 1px solid #798499; */
   }
 
   .home {
@@ -779,18 +755,53 @@ footer .text__copy {
 
   }
 
+  .animals {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+  }
+
+  .animals .home__inside {
+    justify-content: space-between;
+    display: flex;
+
+  }
+
+  .animals .home__inside .inside__img {
+    margin: 25px;
+    justify-content: center;
+  }
+
+
   .main__titulo {
-    width: 80PX;
-    height: auto;
+    width: 300px;
+    height: 100px;
+    padding-top: 30px;
+    margin: 0 auto;
 
   }
 
   .main__titulo h1 {
+    position: relative;
+    display: inline-block;
+    padding: 2px;
+
+
+  }
+
+  .main__titulo span {
+
+    font-size: 40px;
+    align-items: center;
+  }
+
+  /* .main__titulo h1 {
     font-size: 4em;
     font: bold 4.5vw/1.6 'Signika', sans-serif;
     user-select: none;
 
-  }
+  }  */
 
   .container__product {
     display: flex;
@@ -841,133 +852,67 @@ footer .text__copy {
     justify-content: space-evenly;
     align-items: center;
   }
-  .description__title{
+
+  .description__title {
     width: 300px;
     font-size: 31px;
     display: inline-block;
-   color: #00c3ff;
-   margin-top: 20px;
+    color: #00c3ff;
+    margin-top: 20px;
   }
 
-.description__copy {
-  max-width: 1000px;
-  width: 300px;
-  display: flex;
-  justify-content: center;
+  .description__copy {
+    max-width: 1000px;
+    width: 300px;
+    display: flex;
+    justify-content: center;
 
-}
+  }
 
-.footer__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
+  .footer__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
-.footer__img {
-  width: 10px;
-  height: 10px;
-  margin-bottom: 30px;
-}
+  .footer__img {
+    width: 10px;
+    height: 10px;
+    margin-bottom: 30px;
+  }
 
-.text__copy {
-  font-size: 10px;
-  color: #000;
-}
+  .text__copy {
+    font-size: 10px;
+    color: #000;
+  }
 }
 
 @media screen and (max-width:320px) {
 
-  .container__header {
-    display: flex;
-    background-color: #e9e4e0;
-    position: relative;
-    font-size: 10px;
-  }
-
-  .container__header img {
-    width: 80px;
-    height: 80px;
-  }
-
-  .header__category {
-    display: flex;
-
-  }
-
-  .header__category i {
-    cursor: pointer;
-    font-size: 13px;
-  }
-
-  .header__category .category__copy {
-    margin-left: 5px;
-    text-transform: uppercase;
-    color: #2fc1ee;
-    font-size: 13px;
-    font-weight: 700;
-  }
-
-  .nav__item .subitem {
-    width: 150px;
-    height: auto;
-    display: block;
-    align-items: baseline;
-    background-color: whitesmoke;
-    margin-top: 50px;
-
-  }
-
-  .header__category .subitem li a {
-    width: 100%;
-    padding: 7px 20px;
-    color: blue;
-    text-decoration: none;
-    font-size: 13px;
-    text-transform: capitalize;
-    font-weight: 600;
-  }
-
-  .header__product {
-    margin-top: -60px;
-    font-size: 12px;
-  }
-
-  .header__product .product__link i {
-    font-size: 12px;
-    cursor: pointer;
-  }
-
   .header__input {
-    margin-right: 70%;
-    margin-left: 8%;
-    margin-top: 90px;
-    padding: 5px 30px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    justify-content: center;
-    display: flex;
-
+    position: relative;
   }
 
   .header__input input {
-    padding: 3px 30px;
+    padding: 5px 30px;
     border-radius: 30px;
-    border: none;
-    outline: none;
     border: 1px solid #ccc;
-    margin-left: 15px;
-    font-size: 7px;
+    position: relative;
   }
 
-  .header__input i {
-    position: absolute;
-    right: 50px;
-    bottom: 12px;
-    cursor: pointer;
-    font-size: 13px;
-    margin-left: 15px;
+  .main__titulo h1 {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    padding: 1px;
+    background-color: #00c3ff;
+  }
 
+  .main__titulo span {
+
+
+    font-size: 20px;
   }
 }
