--- a/css/questions.css
+++ b/css/questions.css
@@ -52,7 +52,7 @@ header {
         margin-top: 30px;
         margin-bottom: 10px;
     }
-
+t
     .parrafo {
         color: #000000;
         font-size: 16px;
