--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,16 @@
-/*HEADER*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Raleway", sans-serif;
+}
 .menu {
   font-family: 'Poppins', sans-serif;
   background-color: #edeff1;
   height: 150px;
+  border-bottom: 2px solid orange;
 }
 
 .menu__container {
@@ -18,9 +24,9 @@
   margin: 0 auto;
 }
 
-.fa-solid {
+.menu__item .fa-solid {
   color: #000;
-  padding: 5px;
+  padding: 25px;
 
 }
 
@@ -46,7 +52,7 @@
   --transform: rotate(0);
 }
 
-.menu__link {
+.menu__link__inicio{
   color: #2fc1ee;
   text-decoration: none;
   padding: 0 30px;
@@ -57,7 +63,7 @@
 
 }
 
-.fa-brands {
+.menu__item i {
   color: #00e676;
   padding: 5px;
   width: 10px;
@@ -142,9 +148,9 @@
   display: block;
   width: 36px;
 }
-
+/* 
 @media screen and (max-width:1200px) {
-  .menu__link {
+  .menu__link__inicio {
     color: #2fc1ee;
     text-decoration: none;
     padding: 0 30px;
@@ -162,22 +168,30 @@
     display: flex;
 
 
-  }
+  } 
 
-}
+}*/
 
 @media screen and (max-width:800px) {
   .header__input__container {
-
+  
     margin-top: -60px;
     
   }
   .header__input input[type="text"] {
-    width: 100%;
+    width: 98%;
+  }
+  .header__input input::placeholder{
+    font-size: 10px;
+  }
+  .header__input  button[type="submit"] {
+    top: 50%;
+    right: 10px;
+   
   }
   .menu__hamburguer {
     display: flex;
-    margin-top: -40px;
+    margin-top: -30px;
 
   }
 
@@ -216,8 +230,8 @@
     width: 100%;
   }
 
-  .menu__link {
-    padding: 25px 0;
+  .menu__link__inicio {
+    padding: 15px 0;
     padding-left: 30px;
     height: auto;
   }
