--- a/css/cats.css
+++ b/css/cats.css
@@ -6,103 +6,225 @@
 }
 
 body {
-  background-image: url(../assets/pagina/fondo.png);
+  background-image: url('../assets/pagina/fondo.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
   background-attachment: fixed;
   height: 100vh;
+  margin-top: -100px;
+  position: absolute;
 }
 
+/*HOME*/
+.products {
+  padding: 200px 15px;
+}
 
+header {
+  width: 100%;
+  z-index: 999;
+  margin-top: 50px;
+  position: fixed;
+}
+
+/*PRODUCTOS*/
 .barra {
   width: 100%;
-  height: 30px;
-  margin-top: 50px;
+  height: auto;
+  margin-top: 155px;
   display: flex;
   text-align: end;
   justify-content: center;
   background-color: #f1c098;
+  padding: 15px;
 }
+
+.navegacion {
+  width: 250px;
+  height: auto;
+  margin-top: 0px;
+  font-size: 25px;
+  display: flex;
+  text-decoration: none;
+  
+}
+
+.navegacion i {
+  color: #000;
+  padding: 0 15px;
+}
+
 .container__home {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+
 }
 
 .home__img {
+  width: 150px;
+  height: 150px;
+  margin-right: 20px;
+  cursor: pointer;
   position: relative;
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-  border-radius: 50%;
-  margin: 10px;
 }
 
 .home__img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
+
 
 .home__hover {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  width: inherit;
   height: 100%;
+  background: #f0000080;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: #fff;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.home__hover:hover {
-  opacity: 1;
+  transform: scale(0);
+  transition: transform .6s;
 }
 
 .home__title {
-  font-size: 24px;
-  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.home__img:hover .home__hover {
+  transform: scale(1);
 }
 
 
 /*CATEGORIAS*/
-
-.category {
+.products {
   padding: 100px 15px;
 }
 
-.container__category {
+
+.container__products {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-content: center;
   flex-wrap: wrap;
+  margin-top: 100px;
+
 }
 
-.card__category {
-  width: 280px;
-  height: 280px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  box-shadow: 0 0 4px 2px rgba(0, 0, 0, .9);
+.products__select {
+
+  margin: -20px 0 -50px auto;
+  height: auto;
+  overflow: hidden;
+  width: 230px;
+  position: relative;
+}
+
+select {
+  background: transparent;
+  border: none;
+  font-size: 14px;
+  height: 30px;
+  padding: 5px;
+  width: 250px;
+  margin-top: 20px;
+  margin-bottom: -300px;
+}
+
+main select:focus {
+  outline: none;
+}
+
+.products__select::after {
+  content: "\025be";
+  display: table-cell;
+  padding-top: 7px;
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  background-color: #eef4f8;
+  position: absolute;
+  top: 0;
+  right: 0px;
+  pointer-events: none;
+}
+
+.card {
+  width: 400px;
+  height: 450px;
+  background: #eef4f8;
+  box-shadow: 10px 0px 8px 2px rgba(0, 0, 0, .9);
+  margin: 20px 20px;
+  text-align: center;
+  border-radius: 10px;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .card__img {
-  display: block;
-  margin: auto;
-  width: 280px;
-  height: 280px;
-
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  padding-top: 40px;
 }
 
 .card__img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
+}
+
+.card__hover {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #000;
+  width: 100%;
+  background: #015aff40;
+  text-align: center;
+  transform: translateY(100px);
+  transition: all .6s;
+}
+
+
+.card__title {
+  text-transform: uppercase;
+  padding: 4px 0;
+  color: #777777;
+}
+
+.card__link {
+  display: inline-block;
+  padding-bottom: 2px;
+  text-decoration: none;
+  color: #3a3636;
+  text-transform: capitalize;
+  font-size: 18px;
+}
+
+.card__link:hover {
+  color: #000;
+}
+
+.card__paragraph {
+  font-size: 18px;
+  color: #777777;
+}
+
+.card:hover .card__hover {
+  transform: translateY(0);
 }
 
 .btn-whatsapp {
@@ -155,11 +277,32 @@ body {
 }
 
 @media screen and (max-width:1000px) {
+
+  main {
+    width: 100%;
+  }
+
+  .products {
+    width: 100%;
+    height: auto;
+    display: inline-block;
+
+  }
+
+  .container__home {
+    width: 80%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+
+  }
+
   .barra {
     width: 100%;
     height: auto;
-    margin-top: 50px;
-    margin-top: 30px;
+    margin-top: 160px;
+    display: flex;
+
   }
 
   .barra h2 {
@@ -167,13 +310,53 @@ body {
     margin: 0 auto;
 
   }
+
   .home__img {
     width: 80px;
     height: 80px;
-}
-.home__title {
-  font-size: 12px;
-}
+    margin: 20px 10px auto;
+
+  }
+
+  .home__hover {
+    width: 80px;
+    height: 80px;
+  }
+
+  .home__title {
+    font-size: 12px;
+  }
+
+
+
+  .container__products {
+    width: 80%;
+    height: auto;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
+  .card__category {
+    width: 280px;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .card__img {
+    width: 250px;
+    height: 250px;
+    padding-top: 10px;
+  }
+
+  .card__img img {
+    width: 100%;
+    height: 100%;
+
+  }
 }
 
 @media screen and (max-width:320px) {
@@ -189,13 +372,14 @@ body {
     margin: 0 auto;
 
   }
+
   .home__img {
     width: 50px;
     height: 50px;
-}
+  }
 
-.home__title {
+  .home__title {
     font-size: 10px;
-}
+  }
 
 }
