--- a/css/description.css
+++ b/css/description.css
@@ -13,13 +13,15 @@ body {
     background-attachment: fixed;
     height: 100vh;
 }
-header{
+
+header {
     width: 100%;
     height: auto;
     position: fixed;
     z-index: 999;
-  
-  }
+
+}
+
 /*DESCRIPCION*/
 
 .description {
@@ -27,10 +29,27 @@ header{
 }
 
 .container__description {
+    width: 100%;
+    min-height: auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 90px;
+    padding-top: 20px;
 }
+
+.description__titulo {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 20px;
+}
+
+.description__ti {
+    text-align: center;
+    margin-top: 0;
+}
+
 
 .description__text {
     width: 30%;
@@ -59,6 +78,10 @@ main .navegacion a {
 .description__img {
     width: 300px;
     height: 300px;
+    border: gray 1px solid;
+    border-radius: 5px solid ;
+    box-shadow: #2fc1ee 0 1px 2px rgba(0, 0, 0, 0.) inset;
+   
 }
 
 .description__img img {
