--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,4 @@
-
-footer .container__footer {
+ .container__footer {
   width: 100%;
   height: auto;
   background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
@@ -16,53 +15,53 @@ footer .container__footer {
   padding-bottom: 120px;
 }
 
-footer .footer__figure {
+.footer__figure {
   width: 150px;
   height: 150px;
 }
 
-footer .footer__figure img {
+.footer__figure img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: bottom;
 }
 
-footer .footer__services {
+.footer__services {
   margin-left: 40px;
   text-align: center;
 }
 
-footer .services__title {
+.services__title {
   text-transform: uppercase;
   padding-bottom: 10px;
 }
 
-footer .services__link {
+.services__link {
   text-decoration: none;
   color: #fff;
 }
 
-footer .services__paragraph {
+.services__paragraph {
   font-size: 22px;
 }
 
-footer .footer__description {
+.footer__description {
   width: 40%;
   text-align: center;
 }
 
-footer .description__title {
+.description__title {
   text-transform: uppercase;
   padding-bottom: 20px;
 }
 
-footer .description__copy {
+.description__copy {
   text-align: justify;
   font-size: 18px;
 }
 
-footer .footer__text {
+.footer__text {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -73,51 +72,138 @@ footer .footer__text {
   padding: 20px 40px;
 }
 
-footer .footer__img {
-  display: flex;
-  justify-content: space-evenly;
+.icons {
+display: flex;
+column-gap: 25px;
+}
+.icon{
+  width: 60px;
+  height: 60px;
+  display: inline-flex;
   align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 26px;
+  color: #fff;
+  border-radius: 50%;
+  outline: 2px solid #fff;
+  transition-property: outline-color,outline-offset,
+  background-color;
+  transition-duration: .25s;
+}
+.icon:hover{
+  outline-offset: 4px;
+}
+.icon:hover i{
+  animation: shake .25s;
 }
 
-footer .footer__img img {
-  width: 50px;
-  height: 50px;
-
+.icon--instagram:hover{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:#fff
+ 
 }
 
-footer .footer__img a {
+.icon--facebook:hover{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1da1f2 ;
+  outline-color: #1da1f2;
+}
+.icon--tiktok:hover{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: #3f3e3e; */
+  outline-color: #ccc;
+}
+@keyframes shake {
+  10% {
+    transform: rotate(15deg);
+  }
+
+  20% {
+    transform: rotate(-15deg);
+  }
+
+  30% {
+    transform: rotate(15deg);
+  }
+
+  30% {
+    transform: rotate(-15deg);
+  }
+}
+
+
+.footer__img {
+  position: relative;
+  display: inline-block;
+}
+
+.footer__img .icon-link  {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #f51414;
+  transition: color 0.3s;
+
+}
+.footer__img .icon-link:hover{
+  color: #55acee;
+}
+.footer__img .icon-link i{
+  font-size: 24px;
+}
+.footer__img a {
   color: #fff;
   text-decoration: none;
 }
 
-footer .footer__img a {
+.footer__img a {
   padding: 0 20px;
   font-size: 20px;
   transition: all 0.6s;
 }
 
-footer .footer__img .a1:hover {
+.footer__img .a1:hover {
   color: #2fc1ee;
   transform: scale(1.2);
 }
 
-footer .footer__img .a2:hover {
+.footer__img .a2:hover {
   color: red;
   transform: scale(1.2);
 }
 
-footer .footer__img .a3:hover {
+.footer__img .a3:hover {
   color: blueviolet;
   transform: scale(1.2);
 }
 
-footer .text__paragraph {
+.text__paragraph {
   text-transform: uppercase;
   text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
   text-align: center;
 }
 
-footer .cta {
+.cta {
   display: inline-block;
   text-decoration: none;
   color: #fff;
@@ -189,80 +275,101 @@ footer .text__copy {
     transform: scale(2.5);
   }
 }
+
 @media screen and (max-width:1000px) {
-.container__footer {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
-    url("../assets/perro/producto1.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center center;
+  .container__footer {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
+      url("../assets/perro/producto1.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center center;
 
 
+  }
+
+  .footer__services .services__title {
+    width: 100%;
+    height: auto;
+    font-size: 20px;
+    color: #00c3ff;
+
+  }
+
+  .footer__figure {
+    margin-top: 10px;
+    justify-content: float;
+
+  }
+
+  .footer__description {
+    font-size: 10PX;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .description__title {
+    width: 300px;
+    font-size: 25px;
+    display: inline-block;
+    color: #00c3ff;
+    margin-top: 20px;
+  }
+
+  .description__copy {
+    max-width: 1000px;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+
+  }
+
+  .footer__text {
+    padding: 20px;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .icons {
+    display: flex;
+    padding: 20px;
+  
+    }
+    .icon{
+      
+      width: 45px;
+      height: 45px;
+      display: flex;
+      margin: 0 auto 0 auto;
+
+     
+    }
+      
+  .footer__img {
+    width: 10px;
+    height: 10px;
+   
+  }
+
+  .text__copy {
+    margin-bottom: -30px;
+    font-size: 10px;
+    color: #fff;
+    font-weight: bold;
+  }
 }
 
-.footer__services .services__title {
-  width: 400px;
-  height: auto;
-  font-size: 20px;
-  color: #00c3ff;
-
-}
-
-.footer__figure {
-  margin-top: 10px;
-  justify-content: float;
-
-}
-
-.footer__description {
-  font-size: 10PX;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.description__title {
-  width: 300px;
-  font-size: 25px;
-  display: inline-block;
-  color: #00c3ff;
-  margin-top: 20px;
-}
-
-.description__copy {
-  max-width: 1000px;
-  width: 300px;
-  display: flex;
-  justify-content: center;
-
-}
-
-.footer__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.footer__img {
-  width: 10px;
-  height: 10px;
-  margin-bottom: 30px;
-}
-
-.text__copy {
-  font-size: 10px;
-  color: #000;
-}
-}
 @media screen and (max-width:320px) {
   .footer__services .services__title {
     width: 250px;
@@ -270,6 +377,6 @@ footer .text__copy {
     font-size: 18px;
     color: #00c3ff;
     display: inline-block;
-  
+
   }
 }
