--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: "Raleway", sans-serif;
 }
+
 body {
   background-image: url('../assets/pagina/fondo.png');
   background-size: 100% 100%;
@@ -17,11 +18,17 @@ body {
 
 /*HEADER*/
 
+header {
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+}
 
 .menu {
   font-family: 'Poppins', sans-serif;
   background-color: #edeff1;
   height: 150px;
+  border-bottom: 2px solid orange;
 }
 
 .menu__container {
@@ -35,11 +42,12 @@ body {
   margin: 0 auto;
 }
 
-.fa-solid {
+.menu__item .fa-solid {
   color: #000;
-  padding: 5px;
+  padding: 25px;
 
 }
+
 
 .menu__links {
   height: 100%;
@@ -74,7 +82,8 @@ body {
 
 }
 
-.fa-brands {
+
+.menu__item i {
   color: #00e676;
   padding: 5px;
   width: 10px;
@@ -83,27 +92,28 @@ body {
 .product__link {
   text-decoration: none;
 }
+
 .header__input__container {
   display: flex;
   justify-content: center;
- 
+
 }
 
-.header__input  {
-   position: relative;
+.header__input {
+  position: relative;
   display: inline-block;
 }
 
-.header__input  input[type="text"] {
+.header__input input[type="text"] {
   width: 400px;
   padding: 10px;
-  padding-right: 40px; 
+  padding-right: 40px;
   border-radius: 30px;
   outline: none;
   border: 1px solid #ccc;
 }
 
-.header__input  button[type="submit"] {
+.header__input button[type="submit"] {
   position: absolute;
   top: 50%;
   right: 10px;
@@ -113,7 +123,7 @@ body {
   cursor: pointer;
 }
 
-.header__input  button[type="submit"] i {
+.header__input button[type="submit"] i {
   font-size: 16px;
 }
 
@@ -226,7 +236,7 @@ main .home__img:hover .home__hover {
   transform: translateY(0);
 }
 
-main .home__inside {
+.home__inside {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -393,30 +403,89 @@ h1 span:nth-child(14) {
 }
 
 /*PRODUCTOS */
-
-.product {
+.products {
   padding: 100px 15px;
   margin-top: -80px;
 
 }
 
+
 .container__product {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  margin-top: -50px;
-  }
-
-.product__img {
-  width: 250px;
-  height: 250px;
+  flex-wrap: wrap;
+  margin-top: -40px;
 }
 
-.product__img img {
-  width: 100%;
-  height: 100%;
+.card {
+  width: 400px;
+  height: 400px;
+  background: #ededed;
+  box-shadow: 10px 0px 8px 2px rgba(0, 0, 0, .9);
+  margin: 20px 20px;
+  text-align: center;
+  border-radius: 10px;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.card__img {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.card__img img {
+  max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
   object-position: center;
+}
+
+.card__hover {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #000;
+  width: 100%;
+  background: #015aff40;
+  text-align: center;
+  transform: translateY(100px);
+  transition: all .6s;
+}
+
+.card__title {
+  text-transform: uppercase;
+  padding: 4px 0;
+  color: #777777;
+}
+
+.card__link {
+  display: inline-block;
+  padding-bottom: 2px;
+  text-decoration: none;
+  color: #777777;
+  text-transform: capitalize;
+  font-size: 18px;
+}
+
+.card__link:hover {
+  color: #000;
+}
+
+.card__paragraph {
+  font-size: 18px;
+  color: #777777;
+}
+
+.card:hover .card__hover {
+  transform: translateY(0);
 }
 
 .btn-whatsapp {
@@ -470,147 +539,7 @@ h1 span:nth-child(14) {
   }
 }
 
-footer .container__footer {
-  width: 100%;
-  height: auto;
-  background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
-    url("../assets/perro/producto1.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  padding: 80px 40px;
-  color: #fff;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-  padding-bottom: 120px;
-}
 
-footer .footer__figure {
-  width: 150px;
-  height: 150px;
-}
-
-footer .footer__figure img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: bottom;
-}
-
-footer .footer__services {
-  margin-left: 40px;
-  text-align: center;
-}
-
-footer .services__title {
-  text-transform: uppercase;
-  padding-bottom: 10px;
-}
-
-footer .services__link {
-  text-decoration: none;
-  color: #fff;
-}
-
-footer .services__paragraph {
-  font-size: 22px;
-}
-
-footer .footer__description {
-  width: 40%;
-  text-align: center;
-}
-
-footer .description__title {
-  text-transform: uppercase;
-  padding-bottom: 20px;
-}
-
-footer .description__copy {
-  text-align: justify;
-  font-size: 18px;
-}
-
-footer .footer__text {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  color: #fff;
-  padding: 20px 40px;
-}
-
-footer .footer__img {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-footer .footer__img img {
-  width: 50px;
-  height: 50px;
-
-}
-
-footer .footer__img a {
-  color: #fff;
-  text-decoration: none;
-}
-
-footer .footer__img a {
-  padding: 0 20px;
-  font-size: 20px;
-  transition: all 0.6s;
-}
-
-footer .footer__img .a1:hover {
-  color: #2fc1ee;
-  transform: scale(1.2);
-}
-
-footer .footer__img .a2:hover {
-  color: red;
-  transform: scale(1.2);
-}
-
-footer .footer__img .a3:hover {
-  color: blueviolet;
-  transform: scale(1.2);
-}
-
-footer .text__paragraph {
-  text-transform: uppercase;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-  text-align: center;
-}
-
-footer .cta {
-  display: inline-block;
-  text-decoration: none;
-  color: #fff;
-  text-transform: capitalize;
-  font-size: 18px;
-  transition: all 0.6s;
-  text-shadow: rgba(0, 0, 0, 0.5);
-}
-
-footer .cta:hover {
-  color: #ccc;
-  transform: scale(1.2);
-}
-
-footer .text__copy {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-
-}
 
 .btn-whatsapp {
   position: fixed;
@@ -662,18 +591,39 @@ footer .text__copy {
 }
 
 @media screen and (max-width:800px) {
+ .menu{
+ width: 100%;
+ height: auto;
+ margin-top: 120px;
+ }
 
   .header__input__container {
-
+  
     margin-top: -60px;
     
   }
   .header__input input[type="text"] {
-    width: 100%;
+    width: 98%;
+  }
+  .header__input input::placeholder{
+    font-size: 9px;
+  }
+  .header__input  button[type="submit"] {
+    top: 120%;
+    right: 10px;
+   
+  }
+  .header__input i{
+    
+    margin-right: 15px;
+    margin-bottom: 55px;
+  }
+  .menu__link__inicio i{
+    margin-top: -45px;
   }
   .menu__hamburguer {
     display: flex;
-    margin-top: -40px;
+    margin-top: -30px;
 
   }
 
@@ -684,7 +634,7 @@ footer .text__copy {
 
   .menu__item--active {
     --transform: rotate(0);
-    /* --background: #5e7094; */
+    --background: #5e7094;
   }
 
   .menu__item--show {
@@ -696,7 +646,7 @@ footer .text__copy {
     position: fixed;
     max-width: 400px;
     width: 100%;
-    top: 120px;
+    top: 70px;
     bottom: 0;
     right: 0;
     background-color: #ffff;
@@ -717,6 +667,11 @@ footer .text__copy {
     padding-left: 30px;
     height: auto;
   }
+  .menu__link i {
+    width: 10px;
+    height: auto;
+    margin-top: -5px;
+  }
 
 
   .menu__arrow {
@@ -736,11 +691,11 @@ footer .text__copy {
   .menu__link--inside {
     width: 90%;
     margin-left: auto;
-    /* border-left: 1px solid #798499; */
+    border-left: 1px solid #798499;
   }
-
   .home {
     margin-top: -120px;
+    position: relative;
   }
 
   .container__home {
@@ -751,7 +706,8 @@ footer .text__copy {
   }
 
   .home__img {
-    padding: 10px;
+    margin-top: 70px;
+    margin-bottom: -35px;
 
   }
 
@@ -796,12 +752,12 @@ footer .text__copy {
     align-items: center;
   }
 
-  /* .main__titulo h1 {
-    font-size: 4em;
-    font: bold 4.5vw/1.6 'Signika', sans-serif;
-    user-select: none;
-
-  }  */
+  .card {
+    width: 300px;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+  }
 
   .container__product {
     display: flex;
@@ -810,82 +766,23 @@ footer .text__copy {
 
   }
 
+  .card__img {
+    width: 250px;
+    height: 250px;
+    padding-top: 10px;
+  }
+
+  .card__img img {
+    width: 100%;
+    height: 100%;
+
+  }
+
   .product__img {
     padding: 10px;
   }
 
-  .container__footer {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-image: linear-gradient(#0000008c 0%, #0000001c 100%),
-      url("../assets/perro/producto1.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center center;
 
-
-  }
-
-  .footer__services .services__title {
-    width: 500px;
-    height: auto;
-    font-size: 30px;
-    color: #00c3ff;
-
-  }
-
-  .footer__figure {
-    margin-top: 10px;
-    justify-content: float;
-
-  }
-
-  .footer__description {
-    font-size: 10PX;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-
-  .description__title {
-    width: 300px;
-    font-size: 31px;
-    display: inline-block;
-    color: #00c3ff;
-    margin-top: 20px;
-  }
-
-  .description__copy {
-    max-width: 1000px;
-    width: 300px;
-    display: flex;
-    justify-content: center;
-
-  }
-
-  .footer__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-
-  .footer__img {
-    width: 10px;
-    height: 10px;
-    margin-bottom: 30px;
-  }
-
-  .text__copy {
-    font-size: 10px;
-    color: #000;
-  }
 }
 
 @media screen and (max-width:320px) {
